--- a/FrontEnd/src/assets/scss/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/scss/utils/_global-vars.scss
@@ -79,6 +79,8 @@ $lg-modal-height: 37.5rem; // 600px
 
 $default-border-width: 0.1875rem; // 3px
 
+$border-color2: 3px solid #F8E6D8;
+
 /**
  * WEBSITE DESIGN VARIABLES.
  */
@@ -89,3 +91,4 @@ $filter-height: 5vh;
 $filter-top-margin: 5vh;
 
 $rounded-lg: 2.5rem; // 40px
+
