--- a/FrontEnd/src/assets/scss/global/_bootstrap.scss
+++ b/FrontEnd/src/assets/scss/global/_bootstrap.scss
@@ -67,3 +67,8 @@ $modal-default-margin: map-get($spacers, 3);
 .row {
   @extend .no-gutters;
 }
+
+// get rid of default margin for these
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  margin: 0;
+}
