--- a/FrontEnd/src/components/basics/Modal/Modal.module.scss
+++ b/FrontEnd/src/components/basics/Modal/Modal.module.scss
@@ -5,21 +5,23 @@
 }
 
 .modal {
-  @include thin-border('lg');
-
   display: block;
   outline: 0;
   background-color: #fff;
   max-height: 90vh;
-  border-radius: $lg-border-radius;
+  border-radius: $sm-border-radius;
   overflow-y: auto;
 }
 
 // TODO need to add appropriate breakpoints for different screen sizes
 .md {
-  max-width: 600px;
+  width: 450px;
+
+  @include bp-down('sm') {
+    width: 90%;
+  }
 }
 
 .lg {
-  max-width: 90%;
+  width: 90vw;
 }
