added index.ts for profile folders and fixed button again

--- a/FrontEnd/src/components/basics/Button/Button.module.scss
+++ b/FrontEnd/src/components/basics/Button/Button.module.scss
@@ -40,7 +40,7 @@ $growth-factor: 1.15;
 }
 
 .secondaryIcon {
-  height: $md-font-size * $growth-factor * 2;
+  height: $md-font-size * $growth-factor;
 }
 
 .primary {
