--- a/FrontEnd/src/components/Profile/Profile.module.scss
+++ b/FrontEnd/src/components/Profile/Profile.module.scss
@@ -1,36 +1,12 @@
-// TODO: abstract common code from this and WizardForm to theme.scss
-$profile-form-middle-height: 90%;
+.wrapper {
+  max-width: 100%;
+}
 
-.content{
+.content {
   margin-top: 3rem;
 }
 
-.UserInput{
-  width: 100%;
-}
-
-.selectionList {
-  width: 100%;
-  height: 5%;
-  border-radius: $lg-border-radius $lg-border-radius 0 0;
-  justify-content: center;
-  margin-top: 2vh;
-  margin-right: 3rem;
-  @include bp-down('md') {
-    text-align: center;
-  }
-}
-
-.titleNotSelected {
-  height: 3rem;
-  margin-top: 1rem;
-  font-weight: 600;
-  font-size: $md-font-size;
-  color: rgba(32, 32, 32, 0.6);
-  display: flex;
-}
-
-.titleSelected{
+.titleSelected {
   height: 3rem;
   margin-top: 1rem;
   font-weight: 600;
@@ -39,10 +15,11 @@ $profile-form-middle-height: 90%;
   display: flex;
 }
 
-.phoneNum{
+.phoneNum {
   margin-top: 0.5rem;
   width: 10rem;
   height: 2rem;
+
   @include bp-down('md') {
     text-align: center;
     margin-right: auto;
@@ -50,15 +27,11 @@ $profile-form-middle-height: 90%;
   }
 }
 
-.selectOn{
-  color: $primary-400-color;
-}
-
-.selectOff{
+.selectOff {
   color: rgba(32, 32, 32, 0.6);
 }
 
-.selectItem{
+.selectItem {
   padding-top: 0.25rem;
   font-size: 1.25rem;
 }
@@ -71,29 +44,15 @@ $profile-form-middle-height: 90%;
   margin: 0 1.5rem;
 }
 
-.dividerOff{
+.dividerOff {
   visibility: hidden;
-}
-
-.profileCross {
-  position: absolute;
-  top: 26px;
-  left: 42px;
-}
-
-.mypost {
-  color:#a6623f;
-}
-
-.profile-selected-under {
-  text-align: center;
 }
 
 .middleSection {
   width: 100%;
-  height: $profile-form-middle-height;
-  @include bp-up('md') {
-    height: 600px;
+
+  @include bp-down('md') {
+    text-align: center;
   }
 }
 
@@ -117,7 +76,7 @@ $profile-form-middle-height: 90%;
 }
 
 .label {
-  width: 100%; // was 160px, TODO: use non-constant widths
+  width: 100%;
   height: 23px;
   font-family: Montserrat;
   font-size: 20px;
@@ -142,28 +101,13 @@ $profile-form-middle-height: 90%;
   height: 16rem !important;
 }
 
-.schoolYear {
-  .form-group {
-    width: 100%;
-  }
-}
-
-.profileWrap {
-  margin-top: 20px;
-  justify-content: center;
-}
-
-.editWrap {
-  height: 85px;
-}
-
-.smallText{
+.smallText {
   font-size: 12px;
   margin-left: 0.5rem;
   font-weight: normal;
 }
 
-.UserIdentifier{
+.UserIdentifier {
   color: #A64919;
   font-size: 1rem;
   margin-top: 0.5rem;
@@ -176,116 +120,21 @@ $profile-form-middle-height: 90%;
   width: 54px;
   height: 54px;
   margin-left:1rem;
+
   @include bp-down('md') {
     margin-left:0;
   }
 }
 
-.noPostsText {
-  text-align: left;
-  display: block;
-  width: 100%;
-  font-family: Montserrat;
-  font-size: $lg-font-size;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: $secondary-dark-color;
-}
-
-.myPost {
-  background-color: white;
-  border-radius: 15px;
-  padding: 10px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-.myPostPicture {
-  width: 100px;
-  height: 100px;
-  border-radius: 13px;
-}
-
-.myPostInfo {
-  display: flex;
-  flex-direction: column;
-  margin-left: 10px;
-  width: 100%;
-}
-
-.myPostTitle {
-  font-size: $xs-font-size;
-  color: $secondary-dark-color;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  width: 100%;
-  font-family: Montserrat;
-}
-
-.myPostDetails {
-  font-size: $xs-font-size;
-  color: black;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  width: 100%;
-  font-family: Montserrat;
-}
-
-.myPostActions {
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
-.myPostEdit {
-  font-size: $md-font-size;
-  color: $secondary-dark-color;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  text-decoration: underline;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  width: 100%;
-  font-family: Montserrat;
-}
-
-.modal {
-  @include bp-up('md') {
-    max-width: 90%;
-  }
-
-  .modal-content {
-    padding: 0;
-    border: 0;
-  }
-}
-
-.dropdown{
+.dropdown {
   width: 65%;
 }
 
-.bio{
+.bio {
   width: 85%;
 }
 
-.textInfo{
+.textInfo {
   margin-top: 1.5rem;
   margin-left: 1.5rem;
 }
-
