quick comments added

--- a/FrontEnd/src/assets/scss/global/_theme.scss
+++ b/FrontEnd/src/assets/scss/global/_theme.scss
@@ -8,40 +8,12 @@ body {
 }
 
 /**
- * STYLE GUIDE BUTTONS
+ * Needed for dropdown toggle... temporary.
  */
-.btn-primary {
-  @include rounded-pill-shape;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-
-  font-weight: $bold-font-weight;
-  font-size: $xl-font-size;
-  background-color: $primary-light-color;
-  color: white;
-  box-shadow: none;
-  border: 0;
-
-  &:hover {
-    @include box-shadow($primary-dark-color);
-    background-color: $primary-light-color;
-  }
-
-  &:focus {
-    box-shadow: none;
-    background-color: $primary-light-color;
-  }
-}
-
 .show > .btn-success.dropdown-toggle {
   background-color: $primary-light-color;
   border-color: $primary-light-color;
+
   &:focus {
     box-shadow: none;
   }
