--- a/FrontEnd/src/components/AboutPage/HomehubPlan/HomehubPlan.module.scss
+++ b/FrontEnd/src/components/AboutPage/HomehubPlan/HomehubPlan.module.scss
@@ -1,27 +1,22 @@
-.timeline {
-  border-bottom: 0.3125rem solid $primary-500-color;
-}
-
 .timeline_small {
   border-left: 0.3125rem solid $primary-500-color;
   margin-left: 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .timedot_small {
   margin-left: -0.9rem;
-  display: flex;
-  align-items: center;
-  height: 100%;
 }
 
 .timedot {
-  margin-top: -0.9rem;
-  display: flex;
-  justify-content: center;
+  margin-bottom: -0.9rem;
 }
 
 .timeline_wrapper {
-  height: 2rem;
+  border-bottom: 0.3125rem solid $primary-500-color;
+  display: flex;
+  justify-content: center;
 }
 
 .plan_md_center_wrapper {
@@ -47,10 +42,10 @@
 
 .plan_time {
   color: $primary-500-color;
+  margin-top: 2rem;
   margin-bottom: 7rem;
   @include bp-down('sm') {
     margin-bottom: 0;
-    margin-top: 2rem;
   }
 }
 
