add join us section and add header to the plan section as well as small css tweaks

--- a/FrontEnd/src/components/AboutPage/HomehubPlan/HomehubPlan.module.scss
+++ b/FrontEnd/src/components/AboutPage/HomehubPlan/HomehubPlan.module.scss
@@ -19,6 +19,10 @@
   justify-content: center;
 }
 
+.plan_wrapper{
+  padding: 7.5rem 0;
+}
+
 .plan_md_center_wrapper {
   @include bp-up('md') {
     justify-content: center;
