removed the button from slideshow. faked it with css.

--- a/FrontEnd/src/components/basics/SlideShow/Thumbnails/Thumbnails.module.scss
+++ b/FrontEnd/src/components/basics/SlideShow/Thumbnails/Thumbnails.module.scss
@@ -1,8 +1,13 @@
+.clickable {
+  cursor: pointer;
+  display: flex;
+}
+
 .thumbnail {
   height: 20%;
   display: flex;
   overflow-x: auto;
-  background-color: #EEE;
+  background-color: #eee;
 
   & button {
     min-width: 20%;
