--- a/FrontEnd/src/components/basics/Calendar/DatePicker.module.scss
+++ b/FrontEnd/src/components/basics/Calendar/DatePicker.module.scss
@@ -1,18 +1,16 @@
-.arrow {
-    transform: scale(.43,0.42);
-    &.left{
-        background-color: #fff;
-        color: #484848;
-        left: 1.375rem;
-        position: absolute;
-        top:0.6rem;
-    }
-    &.right{
-        background-color: #fff;
-        color: #484848;
-        position: absolute;
-        right: 1.375rem;
-        top:0.6rem;
-    }
+.mounted {
+  background-color: #fff;
+  position: absolute;
+  top: 0.6rem;
+}
 
+.arrow {
+  transform: scale(0.43, 0.42);
+}
+
+.left {
+  left: 1.375rem;
+}
+.right {
+  right: 1.375rem;
 }
