--- a/FrontEnd/src/components/MakeAPost/MakeAPost.module.scss
+++ b/FrontEnd/src/components/MakeAPost/MakeAPost.module.scss
@@ -1,1 +1,26 @@
+.supportText {
+  @include font-type('body 3');
+  margin-top: 0.5rem;
+  text-align-last: center;
+}
 
+.modalWrapper {
+  > div:first-child {
+    background-color: $secondary-900-color !important;
+    opacity: 0.2;
+  }
+}
+
+.modal {
+  padding: 1.5rem;
+  padding-bottom: 2rem;
+}
+
+.modalButtonWrapper {
+  margin-top: 2rem;
+}
+
+.modalButton {
+  border-radius: 0.9375rem;
+  padding: 0.75rem 1.5rem;
+}
