--- a/FrontEnd/src/components/Login/Login.module.scss
+++ b/FrontEnd/src/components/Login/Login.module.scss
@@ -13,3 +13,12 @@
   box-shadow: none !important;
   margin: 0 auto;
 }
+
+.whyText {
+  @include font-type('body 3');
+}
+
+.loginButton {
+  border-radius: 0.625rem;
+  padding: 0.75rem 1.5rem;
+}
