fix: make a post fix pt 1

--- a/FrontEnd/src/assets/scss/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/scss/utils/_global-vars.scss
@@ -80,6 +80,7 @@ $xxs-font-size: 0.75rem;
 $lg-border-radius: 1.25rem; // 20px
 $sm-border-radius: 0.5rem; // 8px
 $input-border-radius: 0.5rem; // 8px
+$button-border-radius: 0.9375rem;
 
 $lg-modal-height: 37.5rem; // 600px
 
