--- a/FrontEnd/src/components/HouseProfile/ApplicationDetails/ApplicationDetails.module.scss
+++ b/FrontEnd/src/components/HouseProfile/ApplicationDetails/ApplicationDetails.module.scss
@@ -3,9 +3,9 @@
   &::before {
     content: '';
     position: absolute;
-    border-bottom: 0.125rem solid $primary-100-color; /*use this to adjust underlin color and size*/
+    border-bottom: 0.125rem solid $primary-100-color; /*use this to adjust underline color and size*/
     width: 100%; /*use this to adjust underline width*/
-    height: 1.1em; /*use this to adjust underline position*/
+    height: 1.1rem; /*use this to adjust underline position*/
   }
 
   @include font-type('h5');
