--- a/FrontEnd/src/components/StudentHouseProfile/NameCard/NameCard.module.scss
+++ b/FrontEnd/src/components/StudentHouseProfile/NameCard/NameCard.module.scss
@@ -57,7 +57,7 @@
 .contactButton {
   margin: 0;
   border: 0.1875rem solid $primary-300-color;
-  border-radius: 0.9375rem;
+  border-radius: $button-border-radius;
   padding: 0.75rem 1.5rem;
 
   @include font-type('subtitle 2');
