--- a/FrontEnd/src/assets/scss/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/scss/utils/_global-vars.scss
@@ -77,6 +77,7 @@ $xxs-font-size: 0.75rem;
 /**
  * STYLE GUIDE OTHER VARS.
  */
+$x-border-radius: 0.25rem;
 $lg-border-radius: 1.25rem; // 20px
 $sm-border-radius: 0.5rem; // 8px
 $input-border-radius: 0.5rem; // 8px
@@ -85,6 +86,7 @@ $button-border-radius: 0.9375rem;
 $lg-modal-height: 37.5rem; // 600px
 
 $default-border-width: 0.1875rem; // 3px
+$x-border-width: 0.125rem;
 
 /**
  * WEBSITE DESIGN VARIABLES.
