--- a/FrontEnd/src/components/HouseProfile/ApplicationDetails/ProofOfIncome/ProofOfIncome.module.scss
+++ b/FrontEnd/src/components/HouseProfile/ApplicationDetails/ProofOfIncome/ProofOfIncome.module.scss
@@ -6,7 +6,7 @@
   padding: 5rem 3rem;
   width: 100%;
   box-shadow: -0.3125rem 0.3125rem $highlight-color;
-  border: 0.125rem solid $highlight-color;
+  border: $x-border-width solid $highlight-color;
 
   @include bp-down('sm') {
     padding: 3rem 1rem;
@@ -28,7 +28,7 @@
 .label {
   display: flex;
   align-items: center;
-  
+
   @include bp-up('md') {
     justify-content: center;
   }
