--- a/FrontEnd/src/components/StudentHousePost/StudentHousePost.module.scss
+++ b/FrontEnd/src/components/StudentHousePost/StudentHousePost.module.scss
@@ -2,6 +2,7 @@
   border-radius: $button-border-radius;
   margin: 0;
   height: 100%;
+
   @include bp-down('md') {
     width: 100%;
   }
@@ -12,12 +13,11 @@
   padding-bottom: 12.5rem;
   width: 100%;
   padding-top: 2rem;
+
   @include bp-down('md') {
-    > div {
-      &:nth-child(n + 2) {
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-      }
+    > div:nth-child(n + 2) {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
     }
   }
 }
