--- a/FrontEnd/src/components/StudentHouseProfile/LookingFor/LookingFor.module.scss
+++ b/FrontEnd/src/components/StudentHouseProfile/LookingFor/LookingFor.module.scss
@@ -1,19 +1,20 @@
 .header {
   margin-right: 3.25rem;
-  @include font-type('subtitle 3');
   width: 4.125rem;
   display: flex;
   align-items: center;
   flex-shrink: 0;
   height: 2rem;
+
+  @include font-type('subtitle 3');
 }
 
-//might need to generalize the below two for chip group
-
+//TODO(cris): might need to generalize the below two for chip group
 .chipWrap {
   display: flex;
   flex-wrap: wrap;
   margin-top: -0.5rem;
+
   > div {
     &:nth-child(n):not(:last-child) {
       margin-right: 0.5rem;
