--- a/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
+++ b/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
@@ -16,7 +16,7 @@
     .unfilled {
       height: 3.125rem;
       color: $black-color;
-      border: 0.125rem solid $border-color !important;
+      border: $x-border-width solid $border-color !important;
       border-radius: $input-border-radius;
       box-shadow: none !important; // TODO set the flag in bootstrap instead of doing this
 
