fix: finish fixing all files related to the make a post PR

--- a/FrontEnd/src/assets/scss/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/scss/utils/_global-vars.scss
@@ -88,6 +88,8 @@ $lg-modal-height: 37.5rem; // 600px
 $default-border-width: 0.1875rem; // 3px
 $x-border-width: 0.125rem;
 
+$box-shadow-color: rgba(0, 0, 0, 0.18);
+
 /**
  * WEBSITE DESIGN VARIABLES.
  */
