--- a/FrontEnd/src/components/StudentHouseProfile/NameCard/NameCard.module.scss
+++ b/FrontEnd/src/components/StudentHouseProfile/NameCard/NameCard.module.scss
@@ -58,7 +58,7 @@
 
 .contactButton {
   margin: 0;
-  border: 0.1875rem solid $primary-300-color;
+  border: $default-border-width solid $primary-300-color;
   border-radius: $button-border-radius;
   padding: 0.75rem 1.5rem;
 
