--- a/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
+++ b/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
@@ -125,6 +125,7 @@
 
     .dropdown {
       flex-grow: 1;
+
       .dropdownMenu {
         width: 100%;
         min-width: 7.75rem;
@@ -132,7 +133,7 @@
         overflow-y: auto;
         background-color: white;
         border: none;
-        box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.18);
+        box-shadow: 0 0.125rem 0.5rem $box-shadow-color;
         .selected {
           background-color: $primary-50-color !important;
           &:before {
