--- a/FrontEnd/src/components/basics/StickyBar/StickyBar.module.scss
+++ b/FrontEnd/src/components/basics/StickyBar/StickyBar.module.scss
@@ -1,11 +1,10 @@
 .bar {
   display: flex;
   flex-wrap: wrap;
-  > div:nth-child(1) {
-    > div:nth-child(1) {
-      padding-top: 1.3125rem;
-      padding-bottom: 1.3125rem;
-    }
+
+  > div:nth-child(1) > div:nth-child(1) {
+    padding-top: 1.3125rem;
+    padding-bottom: 1.3125rem;
   }
 }
 
